--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -92,7 +92,7 @@
               </div>
             </div>
           </div>
-          <div class="row"> <br></div>
+          <div class="row"></div>
           <div class="row">
             <div class="col-md-6">
               <div class="card">
