hooked up delve leaderboard datatables

--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -16,8 +16,7 @@
                 <div class="card-header text-center" id="table1CardTitle"></div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                      [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
                           <th>Name</th>
