centered delve datatables

--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -12,17 +12,17 @@
 
           <div class="row">
             <div class="col-md-6">
-              <div class="card">
+              <div class="card mx-auto">
                 <div class="card-header text-center" id="table1CardTitle"></div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
-                          <th>Name</th>
-                          <th>Email</th>
-                          <th>Website</th>
-                          <th>Email</th>
+                          <th>#</th>
+                          <th>Character</th>
+                          <th>Asc</th>
+                          <th>Depth</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -39,18 +39,17 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="card">
+              <div class="card mx-auto">
                 <div class="card-header text-center" id="table2CardTitle"></div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                      [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
-                          <th>Name</th>
-                          <th>Email</th>
-                          <th>Website</th>
-                          <th>Email</th>
+                          <th>#</th>
+                          <th>Character</th>
+                          <th>Asc</th>
+                          <th>Depth</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -70,7 +69,7 @@
           <div class="row"> </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="card">
+              <div class="card mx-auto">
                 <div class="card-header text-center" id="table4CardTitle"></div>
                 <div class="card-body">
                   <div class="table-responsive">
@@ -98,7 +97,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="card">
+              <div class="card mx-auto">
                 <div class="card-header text-center" id="table5CardTitle"></div>
                 <div class="card-body">
                   <div class="table-responsive">
@@ -106,10 +105,10 @@
                       [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
-                          <th>Name</th>
-                          <th>Email</th>
-                          <th>Website</th>
-                          <th>Email</th>
+                          <th>#</th>
+                          <th>Character</th>
+                          <th>Asc</th>
+                          <th>Depth</th>
                         </tr>
                       </thead>
                       <tbody>
