--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center" id="table1CardTitle"></div>
+                <div class="card-header text-center">{{softcore[0].league}}</div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center" id="table2CardTitle"></div>
+                <div class="card-header text-center">{{hardcore[0].league}}</div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -70,11 +70,10 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center" id="table4CardTitle"></div>
+                <div class="card-header text-center">{{softcoreSsf[0].league}}</div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                      [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
                           <th>#</th>
@@ -98,11 +97,10 @@
             </div>
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center" id="table5CardTitle"></div>
+                <div class="card-header text-center">{{hardcoreSsf[0].league}}</div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                      [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                       <thead>
                         <tr>
                           <th>#</th>
