--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -5,45 +5,31 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width:18%; margin:auto;">
-              <div class="card-header text-center" id="TopTenLadderTitle">UberLab Times</div>
+              <div class="card-header text-center" id="TopTenLadderTitle">Top #5 UberLab Times</div>
             </div>
           </div>
         </div>
-
         <div class="row">
           <div class="col-md-6">
-            <div class="card">
-              <div class="card-header text-center" id="table1CardTitle"></div>
+            <div class="card mx-auto">
+              <div class="card-header text-center">{{softcore[0].league}}</div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                    [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Website</th>
-                        <th>Email</th>
+                        <th>#</th>
+                        <th>Character</th>
+                        <th>Asc</th>
+                        <th>Time</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                      </tr>
-                      <tr>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                      </tr>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
+                      <tr *ngFor="let entry of softcore">
+                        <td>{{entry.rank}}</td>
+                        <td>{{entry.character}}</td>
+                        <td>{{entry.ascendancy}}</td>
+                        <td>{{entry.time}}</td>
                       </tr>
                     </tbody>
                   </table>
@@ -52,38 +38,25 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card">
-              <div class="card-header text-center" id="table2CardTitle"></div>
+            <div class="card mx-auto">
+              <div class="card-header text-center">{{hardcore[0].league}}</div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                    [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Website</th>
-                        <th>Email</th>
+                        <th>#</th>
+                        <th>Character</th>
+                        <th>Asc</th>
+                        <th>Time</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                      </tr>
-                      <tr>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                      </tr>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
+                      <tr *ngFor="let entry of hardcore">
+                        <td>{{entry.rank}}</td>
+                        <td>{{entry.character}}</td>
+                        <td>{{entry.ascendancy}}</td>
+                        <td>{{entry.time}}</td>
                       </tr>
                     </tbody>
                   </table>
@@ -92,41 +65,28 @@
             </div>
           </div>
         </div>
-        <div class="row"></div>
+        <div class="row"> </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="card">
-              <div class="card-header text-center" id="table4CardTitle"></div>
+            <div class="card mx-auto">
+              <div class="card-header text-center">{{softcoreSsf[0].league}}</div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                    [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Website</th>
-                        <th>Email</th>
+                        <th>#</th>
+                        <th>Character</th>
+                        <th>Asc</th>
+                        <th>Time</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                      </tr>
-                      <tr>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                      </tr>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
+                      <tr *ngFor="let entry of softcoreSsf">
+                        <td>{{entry.rank}}</td>
+                        <td>{{entry.character}}</td>
+                        <td>{{entry.ascendancy}}</td>
+                        <td>{{entry.time}}</td>
                       </tr>
                     </tbody>
                   </table>
@@ -135,38 +95,25 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card">
-              <div class="card-header text-center" id="table5CardTitle"></div>
+            <div class="card mx-auto">
+              <div class="card-header text-center">{{hardcoreSsf[0].league}}</div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-striped table-bordered table-sm row-border hover" datatable
-                    [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                  <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                       <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Website</th>
-                        <th>Email</th>
+                        <th>#</th>
+                        <th>Character</th>
+                        <th>Asc</th>
+                        <th>Time</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                      </tr>
-                      <tr>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                        <td>test2</td>
-                      </tr>
-                      <tr>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
-                        <td>test1</td>
+                      <tr *ngFor="let entry of hardcoreSsf">
+                        <td>{{entry.rank}}</td>
+                        <td>{{entry.character}}</td>
+                        <td>{{entry.ascendancy}}</td>
+                        <td>{{entry.time}}</td>
                       </tr>
                     </tbody>
                   </table>
