--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
   <base href="/">
 </head>
 
-<body>
+<body >
+ <!-- <div class="img-responsive" style="background-image: url(./images/poe-ladder-background.jpg) background-position: top; background-repeat: no-repeat; height:100%; width:100%;"></div> -->
   <div class="container-fluid">
     <app-navbar></app-navbar>
     <app-top-five-league-panel></app-top-five-league-panel>
@@ -17,4 +18,6 @@
   <router-outlet></router-outlet>
 </body>
 
+
 </html>
+
