added padding to datatable columns

--- a/src/app/components/top-five-league-panel/top-five-league-panel.component.css
+++ b/src/app/components/top-five-league-panel/top-five-league-panel.component.css
@@ -1,11 +1,12 @@
 .card {
     margin-top: 1em;
     border: 0;
-    
+    padding: 1em;
+
 }
 
-.card-body {
-    padding: 2px;
+.col-md-12 {
+  padding-top: 1em;
 }
 
 
