--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.css
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.css
@@ -1,8 +1,38 @@
 .card {
     margin-top: 1em;
-    width: 80%;
+    width: 100%;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: rgba(51, 51, 51, 0.5);
+    background-clip: border-box;
+    border: 1px solid #1C2F35;
+    border-radius: 0.75rem;
+
+}
+
+.container-fluid {
+  width: 70%;
 }
 
 .col-md-12 {
   padding: 1em;
+}
+
+table {
+  background-color: black;
+  color: white;
+}
+
+thead {
+  background-color: #1C2F35;
+  color: white;
+}
+
+.card-header {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+  background-color: #1C2F35;
+  padding: 4px;
+  color: white;
 }
