--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="card mx-auto">
+    <!-- <div class="card mx-auto" id="parent-card"> -->
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -125,5 +125,5 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
