--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -32,5 +32,42 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
-  </nav>
-  
+  </nav> -->
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-info">
+<div class="col col-md-4 text-center" style="padding-left: 22%;">
+  <a class="navbar-brand" href="/">
+    <b>poe-ladder.com</b></a>
+</div>
+
+<div class="col col-md-4 text-center">
+  <div class="container-fluid">
+    <button class="btn text-body btn-info " aria-expanded="false" id="createCustomLeagueBtn">
+      Create Custom League Ladder
+    </button>
+  </div>
+</div>
+
+<div class="col">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent" style="padding-right:25%;">
+    <ul class="navbar-nav">
+      <li class="nav-item m-0  mt-0">
+        <a class="nav-link" href="#" id="feedback">feedback <br /></a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" href="#" id="changelog">changelog </a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" href="#reviews">about <br /></a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" href="#reviews">support<br /></a>
+      </li>
+    </ul>
+  </div>
+</div>
+</nav>
