--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-info">
 <div class="col col-md-4 text-center" style="padding-left: 22%;">
   <a class="navbar-brand" href="/">
-    <b>poe-ladder.com</b></a>
+    <span id="logo-text">poe-ladder.com</span></a>
 </div>
 
 <div class="col col-md-4 text-center">
