--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.css
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.css
@@ -36,3 +36,11 @@ thead {
   padding: 4px;
   color: white;
 }
+
+.btn {
+  background-color: #010e11;
+  border-color: white;
+  float: right;
+  margin-right: 12%;
+  height: 100%;
+}
