--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -13,7 +13,18 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center">{{softcore[0].league}}</div>
+                <div class="card-header text-center">
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-6">
+                            {{softcore[0].league}}
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -40,7 +51,18 @@
             </div>
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center">{{hardcore[0].league}}</div>
+                <div class="card-header text-center">
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-6">
+                            {{softcore[0].league}}
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -70,7 +92,18 @@
           <div class="row">
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center">{{softcoreSsf[0].league}}</div>
+                <div class="card-header text-center">
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-6">
+                            {{softcore[0].league}}
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -97,7 +130,18 @@
             </div>
             <div class="col-md-6">
               <div class="card mx-auto">
-                <div class="card-header text-center">{{hardcoreSsf[0].league}}</div>
+                <div class="card-header text-center">
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-6">
+                            {{softcore[0].league}}
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="card-body">
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
