--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -11,7 +11,18 @@
         <div class="row">
           <div class="col-md-6">
             <div class="card mx-auto">
-              <div class="card-header text-center">{{softcore[0].league}}</div>
+              <div class="card-header text-center">
+                  <div class="row">
+                      <div class="col">
+                      </div>
+                      <div class="col-6">
+                          {{softcore[0].league}}
+                      </div>
+                      <div class="col">
+                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                      </div>
+                  </div>
+              </div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -38,7 +49,18 @@
           </div>
           <div class="col-md-6">
             <div class="card mx-auto">
-              <div class="card-header text-center">{{hardcore[0].league}}</div>
+              <div class="card-header text-center">
+                  <div class="row">
+                      <div class="col">
+                      </div>
+                      <div class="col-6">
+                          {{hardcore[0].league}}
+                      </div>
+                      <div class="col">
+                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                      </div>
+                  </div>
+              </div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -68,7 +90,18 @@
         <div class="row">
           <div class="col-md-6">
             <div class="card mx-auto">
-              <div class="card-header text-center">{{softcoreSsf[0].league}}</div>
+              <div class="card-header text-center">
+                <div class="row">
+                  <div class="col">
+                  </div>
+                  <div class="col-6">
+                      {{softcoreSsf[0].league}}
+                  </div>
+                  <div class="col">
+                      <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                  </div>
+              </div>
+              </div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
@@ -95,7 +128,18 @@
           </div>
           <div class="col-md-6">
             <div class="card mx-auto">
-              <div class="card-header text-center">{{hardcoreSsf[0].league}}</div>
+              <div class="card-header text-center">
+                  <div class="row">
+                      <div class="col">
+                      </div>
+                      <div class="col-6">
+                          {{hardcoreSsf[0].league}}
+                      </div>
+                      <div class="col">
+                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                      </div>
+                  </div>
+              </div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
