--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -21,7 +21,8 @@
                             {{softcore[0].league}}
                         </div>
                         <div class="col">
-                            <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                            <button type="button" class="btn btn-primary btn-sm float-right"
+                              (click)="onClick(softcore[0].league, softcore[0].leaderboard)">Show Top 100</button>
                         </div>
                     </div>
                 </div>
