--- a/src/app/components/top100leaderboard/top100leaderboard.component.css
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.css
@@ -1,11 +1,11 @@
 .card {
   margin-top: 1em;
-  width: 100%;
+  width: 60%;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  /* background-color: rgba(51, 51, 51, 0.5); */
-  background-color: black;
+  background-color: rgba(51, 51, 51, 0.5);
+
   color: white;
   background-clip: border-box;
   border: 1px solid #1C2F35;
@@ -28,6 +28,7 @@ padding: 1em;
 table {
 background-color: black;
 color: black;
+border-bottom: red;
 }
 
 thead {
@@ -51,3 +52,37 @@ margin-right: 12%;
 height: 100%;
 }
 
+
+
+/* Start of DataTable Row Styling */
+table.dataTable thead th, table.dataTable thead td {
+	padding: 8px 12px;
+  border-bottom: 1px solid white;
+  height: 1x!important;
+  padding: 4px;
+
+
+}
+
+table.dataTable tbody th, table.dataTable tbody td {
+	padding: 5px 10px;
+  border-bottom: 1px solid white;
+  background-color: black;
+  color: white;
+
+}
+
+.dataTables_filter label {
+	color: white;
+}
+
+.dataTables_length label {
+	font-weight: normal;
+	display: none;
+}
+
+.dataTables_wrapper div.dataTables_filter label {
+
+  color: white!important;
+
+}
