--- a/src/app/components/top-five-league-panel/top-five-league-panel.component.html
+++ b/src/app/components/top-five-league-panel/top-five-league-panel.component.html
@@ -1,25 +1,50 @@
+<div class="container-fluid">
 <div class="card">
     <div class="card-body">
+
         <div class="row">
-            <div class="col-sm">
-            </div>
-            <div class="col-sm">
-              <div class="row">
-                <!-- Default dropright button -->
-                <div class="btn-group dropright mx-auto">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Select Leaderboard
-                    </button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" [routerLink]="['/ladder-group-race']" routerLinkActive="active" >Race to 100</a>
-                      <a class="dropdown-item" [routerLink]="['/ladder-group-delve']" routerLinkActive="active">Delve Depths</a>
-                      <a class="dropdown-item" [routerLink]="['/ladder-group-uberlab']" routerLinkActive="active">Uber Lab Times</a>
-                    </div>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm">
-            </div>
+            <form class="mx-auto">
+                <label class="radio-inline" *ngFor="let entry of leagueNames">
+                  <input type="radio" name="optradio" checked>   {{entry.leagueName}}
+                </label>
+              </form>
+        </div>
+
+        <!-- <mat-radio-group class = "tp-radio-group" [(ngModel)] = "selectedLeague">
+            <mat-radio-button class = "tp-radio-button"
+            *ngFor="let entry of leagueNames" [value] = "entry">
+            {{entry.leagueName}}
+            </mat-radio-button>
+         </mat-radio-group>
+         <div class = "tp-selected-value">
+            Selected League: {{selectedLeague.leagueName}}
+         </div> -->
+
+
+
+             <div class="row">
+                <div class="col-sm">
+                </div>
+                <div class="col-sm">
+                   <div class="row">
+                      <!-- Default dropright button -->
+                      <div class="btn-group dropright mx-auto">
+                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Select Leaderboard
+                         </button>
+                         <div class="dropdown-menu">
+                            <a class="dropdown-item" [routerLink]="['/ladder-group-race']" routerLinkActive="active" >Race to 100</a>
+                            <a class="dropdown-item" [routerLink]="['/ladder-group-delve']" routerLinkActive="active">Delve Depths</a>
+                            <a class="dropdown-item" [routerLink]="['/ladder-group-uberlab']" routerLinkActive="active">Uber Lab Times</a>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+                <div class="col-sm">
+                </div>
+             </div>
           </div>
+       </div>
+       <div class="col-sm">
+       </div>
     </div>
-  </div>
