updated league variation filter on the ladder grounp components

--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -56,7 +56,7 @@
                       <div class="col">
                       </div>
                       <div class="col-6">
-                          {{softcore[0].league}}
+                          {{hardcore[0].league}}
                       </div>
                       <div class="col">
                           <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
@@ -98,7 +98,7 @@
                       <div class="col">
                       </div>
                       <div class="col-6">
-                          {{softcore[0].league}}
+                          {{softcoreSsf[0].league}}
                       </div>
                       <div class="col">
                           <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
@@ -136,7 +136,7 @@
                       <div class="col">
                       </div>
                       <div class="col-6">
-                          {{softcore[0].league}}
+                          {{hardcoreSsf[0].league}}
                       </div>
                       <div class="col">
                           <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
