added account field to leaderboard tables

--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -30,6 +30,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
+                      <th>Account</th>
                       <th>Character</th>
                       <th>Asc</th>
                       <th>Depth</th>
@@ -38,6 +39,7 @@
                   <tbody>
                     <tr *ngFor="let entry of softcore">
                       <td>{{entry.rank}}</td>
+                      <td>{{entry.account}}</td>
                       <td>{{entry.character}}</td>
                       <td>{{entry.ascendancy}}</td>
                       <td>{{entry.depth}}</td>
@@ -68,6 +70,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
+                      <th>Account</th>
                       <th>Character</th>
                       <th>Asc</th>
                       <th>Depth</th>
@@ -76,6 +79,7 @@
                   <tbody>
                     <tr *ngFor="let entry of hardcore">
                       <td>{{entry.rank}}</td>
+                      <td>{{entry.account}}</td>
                       <td>{{entry.character}}</td>
                       <td>{{entry.ascendancy}}</td>
                       <td>{{entry.depth}}</td>
@@ -109,6 +113,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
+                      <th>Account</th>
                       <th>Character</th>
                       <th>Asc</th>
                       <th>Depth</th>
@@ -117,6 +122,7 @@
                   <tbody>
                     <tr *ngFor="let entry of softcoreSsf">
                       <td>{{entry.rank}}</td>
+                      <td>{{entry.account}}</td>
                       <td>{{entry.character}}</td>
                       <td>{{entry.ascendancy}}</td>
                       <td>{{entry.depth}}</td>
@@ -147,6 +153,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
+                      <th>Account</th>
                       <th>Character</th>
                       <th>Asc</th>
                       <th>Depth</th>
@@ -155,6 +162,7 @@
                   <tbody>
                     <tr *ngFor="let entry of hardcoreSsf">
                       <td>{{entry.rank}}</td>
+                      <td>{{entry.account}}</td>
                       <td>{{entry.character}}</td>
                       <td>{{entry.ascendancy}}</td>
                       <td>{{entry.depth}}</td>
