--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -31,6 +31,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Level</th>
@@ -39,6 +40,7 @@
                     <tbody>
                       <tr *ngFor="let entry of softcore">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.level}}</td>
@@ -70,6 +72,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Level</th>
@@ -78,6 +81,7 @@
                     <tbody>
                       <tr *ngFor="let entry of hardcore">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.level}}</td>
@@ -111,6 +115,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Level</th>
@@ -119,6 +124,7 @@
                     <tbody>
                       <tr *ngFor="let entry of softcoreSsf">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.level}}</td>
@@ -149,6 +155,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Level</th>
@@ -157,6 +164,7 @@
                     <tbody>
                       <tr *ngFor="let entry of hardcoreSsf">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.level}}</td>
