--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -29,6 +29,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Time</th>
@@ -37,6 +38,7 @@
                     <tbody>
                       <tr *ngFor="let entry of softcore">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.time}}</td>
@@ -67,6 +69,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Time</th>
@@ -75,6 +78,7 @@
                     <tbody>
                       <tr *ngFor="let entry of hardcore">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.time}}</td>
@@ -108,6 +112,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Time</th>
@@ -116,6 +121,7 @@
                     <tbody>
                       <tr *ngFor="let entry of softcoreSsf">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.time}}</td>
@@ -146,6 +152,7 @@
                     <thead>
                       <tr>
                         <th>#</th>
+                        <th>Account</th>
                         <th>Character</th>
                         <th>Asc</th>
                         <th>Time</th>
@@ -154,6 +161,7 @@
                     <tbody>
                       <tr *ngFor="let entry of hardcoreSsf">
                         <td>{{entry.rank}}</td>
+                        <td>{{entry.account}}</td>
                         <td>{{entry.character}}</td>
                         <td>{{entry.ascendancy}}</td>
                         <td>{{entry.time}}</td>
