--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -19,7 +19,8 @@
                           {{softcore[0].league}}
                       </div>
                       <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                          <button type="button" class="btn btn-primary btn-sm float-right"
+                           (click)="onClick(softcore[0].league, softcore[0].leaderboard)">Show Top 100</button>
                       </div>
                   </div>
               </div>
@@ -59,7 +60,8 @@
                           {{hardcore[0].league}}
                       </div>
                       <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                          <button type="button" class="btn btn-primary btn-sm float-right"
+                           (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">Show Top 100</button>
                       </div>
                   </div>
               </div>
@@ -102,7 +104,8 @@
                       {{softcoreSsf[0].league}}
                   </div>
                   <div class="col">
-                      <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                      <button type="button" class="btn btn-primary btn-sm float-right"
+                       (click)="onClick(softcoreSsf[0].league, softcoreSsf[0].leaderboard)">Show Top 100</button>
                   </div>
               </div>
               </div>
@@ -142,7 +145,8 @@
                           {{hardcoreSsf[0].league}}
                       </div>
                       <div class="col">
-                          <button type="button" class="btn btn-primary btn-sm float-right">Show Top 100</button>
+                          <button type="button" class="btn btn-primary btn-sm float-right"
+                           (click)="onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)">Show Top 100</button>
                       </div>
                   </div>
               </div>
