--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,13 +4,9 @@
     <span id="logo-text"><img class="logo" src="assets/images/logo.png">poe-ladder.com</span></a>
 </div>
 
-<!-- <div class="col col-md-4 text-center">
-  <div class="container-fluid">
-    <button class="btn text-body btn-info " aria-expanded="false" id="createCustomLeagueBtn">
-      Create Custom League Ladder
-    </button>
-  </div>
-</div> -->
+<div class="col col-md-4 text-center">
+    <app-custom-league-modal></app-custom-league-modal>
+</div>
 
 <div class="col">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent"
