--- a/src/app/components/top-five-league-panel/top-five-league-panel.component.html
+++ b/src/app/components/top-five-league-panel/top-five-league-panel.component.html
@@ -17,7 +17,7 @@
                     <!-- Default dropright button -->
                     <div class="btn-group dropright mx-auto">
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select Leaderboard
+                        Leaderboard
                         </button>
                         <div class="dropdown-menu">
                           <a class="dropdown-item" (click)="onClickRace(selectedLeague.leagueName)" >Race to 100</a>
